fix landing page issues, toggle button mobile view  and slider mobile view left

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,16 @@ body {
 .grid-margin {
   margin-left: 5%;
   margin-right: 5%;
-  /* background-color: rgb(255, 255, 255); */
+}
+.slider-margin {
+  margin: 0px 40px;
+}
+.slider-margin1{
+  margin: 0px 40px;
+}
+.grid-margin-blue {
+  margin-left: 1%;
+  margin-right: 1%;
 }
 .nav-item {
   padding: 0 5px 0 5px;
@@ -16,16 +25,20 @@ body {
   margin-right: 10px;
 }
 .nav-item a {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 500;
-  color: #2b2b2b;
+  color: #2B2B2B;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+  text-decoration: none;
 }
 .nav-item a:hover {
-  background-color: #0caaed;
   color: #0caaed;
+  font-weight: bold;
+
 }
 .header-img {
-  background: rgba(0, 0, 0, 0.5) url("../images/images/background.jpg");
+  background: rgba(0, 0, 0, 0.5) url("../images/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -112,7 +125,7 @@ body {
 
 .ban-card-sec .card-img {
   width: 100px;
-  margin: 10px;
+  margin: 10px 0px;
 }
 .ban-card-sec {
   position: absolute;
@@ -126,14 +139,13 @@ body {
 }
 
 .third-sec img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 120px;
+  width: 96px;
 }
 .third-sec-inner p {
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 500;
+  margin: 0px;
+  padding-left: 10px;
 }
 
 .number-sec {
@@ -152,27 +164,13 @@ body {
   font-size: 30;
   font-weight: bold;
 }
-
-.circle {
-  background: white;
-  border-radius: 50%;
-  height: 100px;
+.blue-sec-img {
   width: 100px;
-  display: flex;
-}
-.circle img {
-  max-width: 80px;
-  height: 80px;
-  margin: 10px;
-}
-.circle .blue-sec-img {
-  max-width: 70px;
-  height: 70px;
-  margin: 16px 0px 0px 20px;
+  /* margin: 16px 0px 0px 20px; */
 }
 .blue-sec {
   color: #404041;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
   padding: 20px;
   display: flex;
@@ -219,14 +217,13 @@ body {
   font-weight: bold;
 }
 .inner-slider .card-body .button {
-  padding: 10px 80px;
+  padding: 6px 30px;
 }
 
 .inner-slider .tech-card-text p {
   font-size: 12px;
 }
 .inner-slider .tech-card-img img {
-  height: 70px;
   width: 60px;
   justify-content: flex-end;
 }
@@ -274,16 +271,6 @@ body {
 .payment-img {
   width: 250px;
 }
-.inline {
-  display: flex;
-  flex-direction: row;
-}
-.in1 {
-  justify-content: flex-start;
-}
-.in2 {
-  justify-content: flex-end;
-}
 
 .footer-color {
   color: #22bae3;
@@ -298,7 +285,7 @@ body {
   top: -77px;
   left: 0;
   width: 100%;
-} 
+}
 .Newsletter-card {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -314,7 +301,7 @@ body {
 /* newsletter card end*/
 
 .Newsletter-sec {
-  background: rgba(0, 0, 0, 0.5) url("../images/images/footer-img.jpg");
+  background: rgba(0, 0, 0, 0.5) url("../images/footer-img.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -352,6 +339,9 @@ body {
 .Newsletter-sec .button {
   margin-left: -50px;
   padding: 10px 28px 6px 28px;
+}
+.ban-card-sec .card .card-image {
+  width: 85px;
 }
 /* Newsletter-sec end */
 
@@ -458,20 +448,46 @@ body {
   .banner-inner h1 {
     font-size: 58px;
   }
+  .ban-card-sec {
+    top: 576px;
+  }
+  .Newsletter-card {
+    top: -66px;
+  }
+  .ban-card-sec .card .card-image {
+    width: 75px;
+  }
   .ban-card-sec .card {
-    margin-top: -7%;
     margin-right: 15px;
     max-width: 350px;
     padding: 12px 10px;
   }
+  .ban-card-sec .card .card-text {
+    font-size: 14px;
+  }
   .ban-card-sec .card .card-body {
     padding: 12px 0px 12px 8px;
+  }
+  .blue-sec {
+    font-size: 17px;
+  }
+  .blue-sec-img {
+    width: 90px;
   }
   .Newsletter-card .card-body .card-title {
     font-size: 20px;
   }
   .inner-slider .tech-card-text p {
     font-size: 14px;
+  }
+  .inner-slider .card .card-text {
+    font-size: 18px;
+    font-weight: bold;
+  }
+  .inner-slider .card .card-title {
+    color: #2cc4ed;
+    font-weight: bold;
+    font-size: 30px;
   }
   .Footer p {
     font-size: 16px;
@@ -539,13 +555,23 @@ body {
   .third-sec-inner p {
     font-size: 20px;
   }
+  .ban-card-sec {
+    top: 442px;
+  }
+  .Newsletter-card {
+    top: -50px;
+  }
   .ban-card-sec .card {
-    margin-top: -6%;
     max-width: 286px;
-    padding: 4px 4px;
   }
   .ban-card-sec .card .card-body {
     padding: 10px 0px 10px 24px;
+  }
+  .blue-sec {
+    font-size: 15px;
+  }
+  .blue-sec-img {
+    width: 90px;
   }
   .slider-header h3 {
     font-size: 34px;
@@ -558,13 +584,14 @@ body {
     height: 134px;
   }
   .inner-slider .card .card-title {
-    font-size: 30px;
+    font-size: 26px;
   }
   .inner-slider .card .card-text {
-    font-size: 18px;
+    font-size: 16px;
   }
   .inner-slider .card-body .button {
-    padding: 10px 70px;
+    padding: 6px 12px;
+    font-size: 14px;
   }
   .inner-slider .tech-card-text p {
     font-size: 12px;
@@ -587,13 +614,13 @@ body {
     margin-bottom: 1px;
   }
   .ban-card-sec .card .card-text {
-    font-size: 15px;
+    font-size: 13px;
   }
   .third-sec-inner p {
     font-size: 18px;
   }
   .third-sec img {
-    width: 100px;
+    width: 80px;
   }
   .Newsletter-card .card .card-title {
     padding-left: 20px;
@@ -631,6 +658,7 @@ body {
 
   .ban-card-sec .card {
     max-width: 220px;
+    padding: 5px 10px;
   }
   .ban-card-sec .card .card-title {
     font-size: 14px;
@@ -640,14 +668,25 @@ body {
     width: 60px;
   }
   .ban-card-sec .card .card-text {
-    font-size: 12px;
+    font-size: 11px;
   }
   .ban-card-sec .card .card-body {
     padding: 8px 0px 8px 4px;
   }
-
+  .ban-card-sec {
+    top: 344px;
+  }
+  .Newsletter-card {
+    top: -42px;
+  }
+  .Newsletter-card .card {
+    padding: 10px 20px;
+  }
+  .video-player {
+    padding: 80px 0px 30px 0px;
+  }
   .third-sec img {
-    width: 86px;
+    width: 70px;
   }
   .third-sec-inner p {
     font-size: 14px;
@@ -665,7 +704,8 @@ body {
     font-size: 26px;
   }
   .inner-slider .card-body .button {
-    padding: 6px 25px;
+    padding: 6px 8px;
+    font-size: 12px;
   }
   .slider .button {
     padding: 8px 14px 8px 14px;
@@ -674,11 +714,11 @@ body {
   .slider .exp-btn {
     text-align: right;
   }
+  .blue-sec-img {
+    width: 80px;
+  }
   .blue-sec {
-    color: #404041;
-    font-size: 16px;
-    font-weight: bold;
-    padding: 16px;
+    font-size: 14px;
   }
   .Newsletter-sec .new-text h2 {
     font-size: 36px;
@@ -705,7 +745,7 @@ body {
     width: 250px;
   }
   .Newsletter-card .card {
-    padding: 6px 20px;
+    padding: 10px 20px;
   }
   .button {
     padding: 6px 15px 6px 15px;
@@ -746,11 +786,26 @@ body {
   .ban-card-sec .card-img {
     text-align: center;
   }
+  .ban-card-sec {
+    top: 350px;
+  }
+  .Newsletter-card {
+    top: -296px;
+  }
   .ban-card-sec .card .card-text {
     font-size: 14px;
   }
   .ban-card-sec .card .card-title {
     font-size: 16px;
+  }
+  .video-player {
+    padding: 324px 0px 10px 0px;
+  }
+  .slider-margin {
+    margin: 0px 40px 206px 40px;
+  }
+  .slider-margin1{
+    margin: 0px 40px;
   }
   .slider .slider-main {
     text-align: center;
@@ -773,8 +828,11 @@ body {
     padding: 8px 20px 8px 20px;
     font-size: 14px;
   }
+  .blue-sec-img {
+    width: 74px;
+  }
   .blue-sec {
-    font-size: 14px;
+    font-size: 12px;
   }
   .Newsletter-sec .new-text h2 {
     font-size: 28px;
@@ -787,6 +845,9 @@ body {
     font-size: 12px;
     font-size: bold;
   }
+  .Newsletter-sec {
+    padding: 70px 0px 70px 0px;
+}
   .Newsletter-sec .button {
     margin-left: -50px;
     padding: 8px 22px 6px 22px;
@@ -833,4 +894,20 @@ body {
   .Newsletter-sec .new-input input {
     font-size: 11px;
   }
+  .ban-card-sec {
+    top: 254px;
+  }
+  .Newsletter-card {
+    top: -288px;
+}
+  .blue-sec-img {
+    width: 74px;
+  }
+  .blue-sec {
+    font-size: 12px;
+  }
+  .video-player {
+    padding: 375px 0px 10px 0px;
+}
+
 }
